Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98247

qobject_cast pointer conversion crashed

    XMLWordPrintable

Details

    • a0e7fbd4d54ddbea5c2b155b0f828df3ce3c98fb (qt/qtbase/dev) f9ea9e9b0a57e4b7db929a2b179ba0f3f622431c (qt/qtbase/6.2)

    Description

      qobject_cast returns null when the parent QWidget object calls the menuBar() interface, causing the null pointer to crash

       

      void tst_QMenuBar::callMenuBarCrashedAfterSetMenuWidget()
      {
          QMainWindow w;
          w.setMenuWidget(new QWidget);
          QVERIFY(w.menuBar());
      }
      

       

      Attachments

        For Gerrit Dashboard: QTBUG-98247
        # Subject Branch Project Status CR V

        Activity

          People

            vhilshei Volker Hilsheimer
            lixi Li Xi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes