Test result of qobject_cast before dereferencing

Since QMainWindow::setMenuWidget accepts a QWidget (allowing users to
implement their own menu widget), we need to use qobject_cast on the
stored widget to see if it is a QMenuBar before calling QMenuBar APIs.

This qobject_cast may return nullptr.

Fixes: QTBUG-98247
Change-Id: Iff1dbd24fa7ca09098fe49c179770356c966251d
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit a0e7fbd4d54ddbea5c2b155b0f828df3ce3c98fb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>